# premiscale

./: .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .pylintrc  .pypirc  .tool-versions  CONTRIBUTING.md  Dockerfile  Dockerfile.develop  Dockerfile.local  LICENSE  LICENSE.txt  MANIFEST.in  README.md  autoscaler-0.1.0.tgz  compose.nginx.conf  compose.yaml  devspace.yaml  docker-compose.yml  libvirt_python-9.10.0-cp310-cp310-macosx_14_0_arm64.whl  mysql-connector-python.deb  not-setup.py  package.json  premiscale-0.0.1.tgz  pyproject.toml  pyproject.toml.tmp  registries.yaml  renovate.json  requirements.txt  setup.py
.circleci/: conf.yml  config.yml  docker.autoscaler.ignore  docker.autoscaler.yml  docker.influxdb.ignore  docker.influxdb.yml  docker.mysql.ignore  docker.mysql.yml  helm.autoscaler.ignore  helm.autoscaler.yml  helm.influxdb.ignore  helm.influxdb.yml  helm.mysql.ignore  helm.mysql.yml  helm.premiscale.ignore  helm.premiscale.yml  helm.yml  premiscale.config.data.yml  premiscale.ignore  premiscale.yml  schema.ignore  schema.yml  scripts.yml  src.ignore  src.premiscale.config.data.yml  src.yml  tests.ignore  tests.yml
.github/: settings.yml
.github/workflows/: docs.yml
.remove/helm/mysql/: values.yaml
conf/: README.md  default.yaml  schema.yaml
config/: .hadolint.yaml  README.md  schema.yaml
config/grafana/: config.ini
docker/: docker-compose.yml
docker/autoscaler/: Dockerfile
docker/autoscaler/scripts/: cmd.sh  run.sh
docker/influxdb/: Dockerfile
docker/mysql/: Dockerfile
docker/premiscale/: Dockerfile  Dockerfile.develop
docs/: CNAME  index.html  premiscale.html  search.js
docs/premiscale/: api.html  autoscaling.html  cli.html  config.html  controller.html  exceptions.html  hypervisor.html  kubernetes.html  metrics.html  platform.html  state.html  utils.html
docs/premiscale/api/: healthcheck.html
docs/premiscale/autoscaling/: actions.html
docs/premiscale/config/: parse.html  schemas.html  v1alpha1.html
docs/premiscale/controller/: _daemon.html  reconciliation.html
docs/premiscale/hypervisor/: esx.html  kubevirt.html  libvirt.html  qemu.html  xen.html
docs/premiscale/kubernetes/: interface.html
docs/premiscale/metrics/: _base.html  influxdb.html  local.html
docs/premiscale/platform/: utils.html
docs/premiscale/state/: _base.html  local.html  mysql.html  sql.html
helm/: README.md
helm/autoscaler/: Chart.yaml  values-develop.yaml  values-master.yaml  values.yaml
helm/autoscaler/templates/: configmap.yaml  deployment.yaml  ss.yaml  svc.yaml
helm/influxdb/: Chart.yaml  values-develop.yaml  values-master.yaml  values.yaml
helm/influxdb/templates/: ss.yaml  sts.yaml
helm/mysql/: Chart.yaml  values-develop.yaml  values-master.yaml  values.yaml
helm/mysql/templates/: ss.yaml  sts.yaml  svc.yaml
helm/premiscale/: Chart.yaml  README.md  values-develop.yaml  values-master.yaml  values.schema.json  values.yaml
helm/premiscale-e2e/: Chart.yaml
helm/premiscale-e2e/templates/: _helpers.tpl
helm/premiscale/templates/: configmap.yaml  deployment.yaml  registration-secret.yaml  service.yaml  serviceaccount.yaml  ss.yaml  svc.yaml
premiscale/: __init__.py  daemon.py  influxdb.py  mysql.py  premiscale.py  version.py
premiscale/agent/: actions.py  autoscaling.py  cli.py  daemon.py  influxdb.py  libvirt.py  metrics.py  mysql.py  platform.py  reconciliation.py
premiscale/config/: _config.py  parse.py  utils.py  v1alpha1.py
premiscale/config/data/: default.yaml  schema.v1alpha1.yaml  schema.yaml
premiscale/daemon/: daemon.py
premiscale/hypervisor/: esx.py  kvm.py  xen.py
premiscale/influxdb/: database.py
premiscale/metrics/: influxdb.py
premiscale/mysql/: database.py
premiscale/premiscale/: daemon.py  influxdb.py  mysql.py  platform.py  premiscale.py
premiscale/state/: _base.py  mysql.py
schema/: schema.yaml
scripts/: compose-up.sh  dependencies.sh  generate-test-self-signed-certs.sh  minikube.sh  psthread.sh  pstree.sh  pylint.sh  view-cert.sh  view-qemu.sh
scripts/docker/: build-influxdb.sh  build-premiscale.sh  build.sh  compose-down.sh  compose-up.sh  run.sh
scripts/docker/compose/: up.sh
scripts/helm/: autoscaler-install.sh  influxdb-install.sh  mysql-install.sh  premiscale-install.sh  repo-add.sh
service/: autoscaler.service
src/: premiscale.py  test_hook.py  utils.py  version.py
src/cli/: autoscaler.py
src/config/: config.py  parse.py  utils.py  validate.py
src/daemon/: daemon.py
src/platform/: __init__.py
src/premiscale/: __init__.py  cli.py  daemon.py  errors.py  premiscale.py  utils.py
src/premiscale/agent/: actions.py  cli.py  daemon.py  metrics.py  platform.py
src/premiscale/api/: __init__.py  healthcheck.py  utils.py
src/premiscale/api/healthcheck/: __init__.py  routes.py
src/premiscale/api/metrics/: __init__.py  routes.py
src/premiscale/autoscaling/: __init__.py  actions.py  group.py
src/premiscale/config/: __init__.py  _config.py  _v1alpha1.py  default.yaml  parse.py  v1alpha1.py
src/premiscale/config/data/: README.md  default.schema.json  default.yaml  schema.v1alpha1.yaml  v1alpha1.md
src/premiscale/config/docs/: README.md  default.md
src/premiscale/controller/: _daemon.py  _state.py  actions.py  cli.py  daemon.py  metrics.py  platform.py  reconciliation.py  utils.py
src/premiscale/healthcheck/: routes.py  server.py
src/premiscale/hypervisor/: __init__.py  _base.py  _schemas.py  esx.py  esx_data.py  kubevirt.py  qemu.py  qemu_data.py  vmware.py  xen.py
src/premiscale/kubernetes/: __init__.py
src/premiscale/metrics/: __init__.py  _base.py  influxdb.py  local.py
src/premiscale/platform/: __init__.py  utils.py
src/premiscale/reconciliation/: internal.py  kubernetes.py
src/premiscale/state/: __init__.py  _base.py  local.py  mysql.py  redis.py
src/tests/: common.py
tests/config/: data
(+21 files in other folders)
