[tool.poetry]
name = "premiscale"
version = "0.0.1"
description = "PremiScale autoscaler"
authors = ["Emma Doyle <emma@premiscale.com>"]
maintainers = ["Emma Doyle <emma@premiscale.com>"]
license = "Proprietary"
readme = "README.md"
packages = [
  { include = "premiscale", from = "src" }
]
include = [
  "LICENSE"
]
keywords = [
    "premiscale",
    "autoscaling",
    "asg",
    "kvm",
    "libvirt"
]

[tool.poetry.dependencies]
python = "^3.10"
yamale = "^5.0.0"
Flask = "^3.0.0"
flask-cors = "^4.0.0"
websockets = "^11.0"
influxdb = "^5.3"
python-daemon = "^3.0"
libvirt-python = "^9.0"
setproctitle = "^1.3"
sqlmodel = "^0.0"

[tool.poetry.group.dev.dependencies]
twine = "^4.0.2"
pylint = "^3.0.0"
pre-commit = "^3.0.0"
cogapp = "^3.4.1"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
premiscale = "premiscale.controller.cli:main"

[tool.mypy]
python_version = "3.10"
strict_optional = true
ignore_missing_imports = true

[tool.pylint."MESSAGES CONTROL"]
disable = "invalid-name,wrong-import-order,superfluous-parens,line-too-long,missing-final-newline,logging-fstring-interpolation,too-many-instance-attributes,unused-argument,unused-import"
fail-under = 4

[tool.pylint.MASTER]
init-hook = "import sys; sys.path.append('.')"