[tool.poetry]
name = "premiscale"
version = "0.0.1"
description = "PremiScale autoscaler"
authors = ["Emma Doyle <emma@premiscale.com>"]
maintainers = ["Emma Doyle <emma@premiscale.com>"]
license = "Proprietary"
readme = "README.md"
packages = [
  { include = "premiscale", from = "src" }
]
include = [
  "LICENSE"
]
exclude = [
  "src/premiscale/config/examples",
  "src/premiscale/config/docs"
]
keywords = [
    "premiscale",
    "autoscaling",
    "asg",
    "kvm",
    "libvirt"
]

[tool.poetry.dependencies]
python = "^3.10"
yamale = "^5"
Flask = "^3.0.0"
flask-cors = "^4.0"
websockets = "^11.0"
influxdb = "^5.3"
libvirt-python = "^10.0"
setproctitle = "^1.3"
sqlmodel = "^0"
cattrs = "^23.2.3"
attrs = "^23.2.0"
ruamel-yaml = "^0.18.6"

[tool.poetry.group.dev.dependencies]
twine = "^5.0"
pylint = "^3.0.0"
pre-commit = "^3.0.0"
cogapp = "^3.4.1"
mypy = "^1.10.0"
pydoclint = "^0.4.1"
pdoc = "^14.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
premiscale = "premiscale.cli:main"

[tool.mypy]
python_version = "3.10"
strict_optional = true
ignore_missing_imports = true

[tool.pydoclint]
style = "google"
require-return-section-when-returning-nothing = false

[tool.pylint."MESSAGES CONTROL"]
disable = "invalid-name,wrong-import-order,superfluous-parens,line-too-long,missing-final-newline,logging-fstring-interpolation,too-many-instance-attributes,unused-argument,unused-import"
fail-under = 2

[tool.pylint.MASTER]
init-hook = "import sys; sys.path.append('.')"